--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.cache.cache-names=c1
+server.port= 9090
+spring.datasource.type= com.alibaba.druid.pool.DruidDataSource
+spring.datasource.username= root
+spring.datasource.password=
+#spring.datasource.driver-class-name= com.mysql.jdbc.Driver
+spring.datasource.url= jdbc:mysql://127.0.0.1:3308/user_test?useUnicode=true&useSSL=false&amp;characterEncoding=UTF-8
+
+
+#https
+server.ssl.key-store=classpath:javaboy.p12
+server.ssl.key-alias=tomcathttps
+server.ssl.key-password=yangfuhui
+
