--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <artifactId>druid</artifactId>
             <version>1.0.29</version>
         </dependency>
+        <!-- Starter-->
+        <dependency>
+            <groupId>com.yang</groupId>
+            <artifactId>starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
