--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,18 @@ spring.datasource.type= com.alibaba.druid.pool.DruidDataSource
 spring.datasource.username= root
 spring.datasource.password=
 #spring.datasource.driver-class-name= com.mysql.jdbc.Driver
-spring.datasource.url= jdbc:mysql://127.0.0.1:3308/user_test?useUnicode=true&useSSL=false&amp;characterEncoding=UTF-8
+spring.datasource.url= jdbc:mysql://127.0.0.1:3306/user_test01?useUnicode=true&useSSL=false&amp;characterEncoding=UTF-8
 
+
+spring.datasource.one.url=jdbc:mysql://127.0.0.1:3306/user_test01?useUnicode=true&characterEncoding=utf-8
+spring.datasource.one.username=root
+spring.datasource.one.password=
+spring.datasource.one.type=com.alibaba.druid.pool.DruidDataSource
+
+spring.datasource.two.url=jdbc:mysql://127.0.0.1:3306/user_test02?useUnicode=true&characterEncoding=utf-8
+spring.datasource.two.username=root
+spring.datasource.two.password=
+spring.datasource.two.type=com.alibaba.druid.pool.DruidDataSource
 
 #https
 server.ssl.key-store=classpath:javaboy.p12
