--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
         <!--swagger-->
         <dependency>
             <groupId>io.springfox</groupId>
@@ -104,11 +108,7 @@
             <version>1.1.10</version>
         </dependency>
         <!-- -->
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcpkix-jdk15on</artifactId>
-            <version>1.55</version>
-        </dependency>
+
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
@@ -132,6 +132,7 @@
     </dependencies>
 
     <build>
+        <!-- 扫描路径下mapper.xml文件-->
             <resources>
                 <resource>
                     <directory>src/main/java</directory>
