--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,18 @@
+##redis
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
+spring.redis.database=0
+spring.redis.password=123
+spring.redis.lettuce.pool.min-idle=5
+spring.redis.lettuce.pool.max-idle=10
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.max-wait=1ms
+spring.redis.lettuce.shutdown-timeout=100ms
+##cache
 spring.cache.cache-names=c1
+#¶Ë¿Ú
 server.port= 9090
+#mysql
 spring.datasource.type= com.alibaba.druid.pool.DruidDataSource
 spring.datasource.username= root
 spring.datasource.password=
