有一堆不知道什么玩意的东西，重点是上证指数爬虫（jsoup）＋简单的echarts还有security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,8 +30,26 @@ spring.datasource.two.username=root
 spring.datasource.two.password=
 spring.datasource.two.type=com.alibaba.druid.pool.DruidDataSource
 
+spring.datasource.three.url=jdbc:mysql://127.0.0.1:13306/jj?useUnicode=true&characterEncoding=utf-8
+spring.datasource.three.username=root
+spring.datasource.three.password=root
+spring.datasource.three.type=com.alibaba.druid.pool.DruidDataSource
+
 #https
 server.ssl.key-store=classpath:javaboy.p12
 server.ssl.key-alias=tomcathttps
 server.ssl.key-password=yangfuhui
 
+#spring security
+spring.security.user.name=yangfuhui
+spring.security.user.password=yangfuhui
+
+
+### thymeleaf
+#spring.thymeleaf.mode=HTML5
+#spring.thymeleaf.encoding=UTF-8
+#spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+#spring.thymeleaf.check-template-location=true
