--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,15 +22,15 @@ spring.datasource.url= jdbc:mysql://127.0.0.1:3306/user_test01?useUnicode=true&u
 
 spring.datasource.one.url=jdbc:mysql://127.0.0.1:3306/user_test01?useUnicode=true&characterEncoding=utf-8
 spring.datasource.one.username=root
-spring.datasource.one.password=
+spring.datasource.one.password=root
 spring.datasource.one.type=com.alibaba.druid.pool.DruidDataSource
 
 spring.datasource.two.url=jdbc:mysql://127.0.0.1:3306/user_test02?useUnicode=true&characterEncoding=utf-8
 spring.datasource.two.username=root
-spring.datasource.two.password=
+spring.datasource.two.password=root
 spring.datasource.two.type=com.alibaba.druid.pool.DruidDataSource
 
-spring.datasource.three.url=jdbc:mysql://127.0.0.1:13306/jj?useUnicode=true&characterEncoding=utf-8
+spring.datasource.three.url=jdbc:mysql://127.0.0.1:3306/jj?useUnicode=true&characterEncoding=utf-8
 spring.datasource.three.username=root
 spring.datasource.three.password=root
 spring.datasource.three.type=com.alibaba.druid.pool.DruidDataSource
